syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.glamey.grpc.proto";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HL";

//  服务接口对应的报名，最终的服务是 helloworld.Greeter.sayHi
package helloworld;

message HelloRequest {
  string name = 1;
  string address = 2;
}

message HelloResponse {
  string message = 1;
}

service Greeter {
  rpc sayHi(HelloRequest) returns (HelloResponse);
}
